# C264

./: .clang-format  .gitmodules  CMakeLists.txt
src/: annexBReader.cpp  c264.cpp  decoder.cpp  log.cpp  source.cpp
src/core/: coredec.cpp
src/inc/c264/: c264.h  config.h  source.h
src/inc/internal/: annexBReader.h  bitGetter.h  decoder.h  defines.h  fileReader.cpp  log.h  tables.h
src/inc/internal/core/: coredec.h
src/inc/internal/sema/: sema.h
src/inc/internal/syntax/: cabac.h  common.h  macroblock.h  nal.h  parset.h  slice.h  syntax.h
src/sema/: sema.cpp
src/syntax/: cabac.cpp  macorblock.cpp  macroblock_cabac.cpp  macroblock_cavlc.cpp  nal.cpp  parset.cpp  slice.cpp  syntax.cpp
test/: CMakeLists.txt
test/include/: cabac_test.h  utils.hpp
test/singles/: AnnexBReader.cpp  BitGetter.cpp  cabac_test.cpp  decode.cpp  source.cpp  sps.cpp  test_.cpp
test/unit_test/: CMakeLists.txt
test/unit_test/src/: main.cpp
